--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fs": "^0.0.1-security",
     "leaflet": "^1.9.4",
     "mysql2": "^3.14.0",
+    "path-to-regexp": "^8.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
