--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
-    "wellknown": "^0.5.0"
+    "wellknown": "^0.5.0",
+    "@anthropic-ai/sdk": "^0.51.0",
+    "@modelcontextprotocol/sdk": "^1.11.4",
+    "google-auth-library": "^9.15.1",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
