--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.51.0",
+    "@langchain/anthropic": "^0.3.26",
+    "@langchain/core": "^0.3.69",
+    "@modelcontextprotocol/sdk": "^1.11.4",
     "colorbrewer": "^1.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
+    "google-auth-library": "^9.15.1",
+    "langchain": "^0.3.30",
     "leaflet": "^1.9.4",
     "mysql2": "^3.14.0",
     "path-to-regexp": "^8.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
+    "url": "^0.11.4",
     "wellknown": "^0.5.0",
-    "@anthropic-ai/sdk": "^0.51.0",
-    "@modelcontextprotocol/sdk": "^1.11.4",
-    "google-auth-library": "^9.15.1",
-    "url": "^0.11.4"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
