--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@langchain/anthropic": "^0.3.26",
     "@langchain/core": "^0.3.69",
     "@modelcontextprotocol/sdk": "^1.11.4",
+    "canvas": "^3.1.2",
     "colorbrewer": "^1.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -24,6 +25,7 @@
     "leaflet": "^1.9.4",
     "mysql2": "^3.14.0",
     "path-to-regexp": "^8.2.0",
+    "plotly.js": "^3.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
