--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@langchain/core": "^0.3.69",
     "@modelcontextprotocol/sdk": "^1.11.4",
     "canvas": "^3.1.2",
+    "chart.js": "^4.5.0",
+    "chartjs-node-canvas": "^5.0.0",
     "colorbrewer": "^1.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
