--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@modelcontextprotocol/sdk": "^1.11.4",
     "canvas": "^3.1.2",
     "chart.js": "^4.5.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-node-canvas": "^5.0.0",
     "colorbrewer": "^1.6.1",
     "cors": "^2.8.5",
@@ -29,6 +30,7 @@
     "path-to-regexp": "^8.2.0",
     "plotly.js": "^3.1.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "url": "^0.11.4",
