--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.51.0",
+    "@googlemaps/js-api-loader": "^1.16.10",
     "@langchain/anthropic": "^0.3.26",
     "@langchain/core": "^0.3.69",
     "@modelcontextprotocol/sdk": "^1.11.4",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/google.maps": "^3.58.1",
     "@types/leaflet": "^1.9.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
